<resources>
    <string name="app_name">智能管家</string>
    <string name="tab_title_one">语言管家</string>
    <string name="tab_title_two">微信精选</string>
    <string name="tab_title_three">美女图片</string>
    <string name="tab_title_four">个人中心</string>
    <string name="message_send">发送</string>
    <string name="user_name_text">用户名:</string>
    <string name="pass_world_text">密&#160;&#160;&#160;&#160;码:</string>
    <string name="login_text">登陆</string>
    <string name="forgot_passworld_text">忘记密码</string>
    <string name="regist_user">注册</string>
    <string name="email_text">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="eamil_no_null">邮箱不能为空!</string>
    <string name="username_no_null">用户名不能为空!</string>
    <string name="passworld_no_null">密码不能为空!</string>
    <string name="sex_is_boy">男</string>
    <string name="sex_is_girl">女</string>
    <string name="regist_sex">性&#160;&#160;&#160;&#160;别:</string>
    <string name="remember_password">记住密码</string>
    <string name="introduce_lazy_people">这个人很懒，什么都没留下</string>
    <string name="commit_message">提交</string>
    <string name="user_age_text">年&#160;&#160;&#160;&#160;龄：</string>
    <string name="user_introduce_text">简&#160;&#160;&#160;&#160;介:</string>
    <string name="user_age">岁</string>
    <string name="courier_select_text">物流查询</string>
    <string name="phone_select_text">归属地查询</string>
    <string name="logout_text">退出登录</string>
    <string name="change_info_text">修改信息</string>
    <string name="login_loading_text">登陆中</string>
    <string name="write_courier_num">请输入快递单号</string>
    <string name="write_courier_com">请输入快递公司</string>
    <string name="select_text">查询</string>
    <string name="courier_time_text">时间:</string>
    <string name="courier_remark_text">状态:</string>
    <string name="courier_zone_text">区:</string>
    <string name="text_input_phone">请输入查询号码</string>

</resources>
