<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 垂直可滑动-->


        <RelativeLayout
            android:id="@+id/user_backgroud_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/user_frgament_bg">
            <TextView
                android:id="@+id/change_user_info"
                android:layout_margin="@dimen/radio_padding_size"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regist_textsize"
                android:text="@string/change_info_text"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/user_name_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regist_textsize" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/radio_padding_size"
                android:layout_weight="2"
                android:text="@string/regist_sex"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regist_textsize" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:enabled="false"
                android:orientation="horizontal">

                <RadioButton
                    android:enabled="false"
                    android:id="@+id/user_sex_boy_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radio_padding_size"
                    android:hint="@string/sex_is_boy"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/regist_textsize" />

                <RadioButton
                    android:checked="true"
                    android:enabled="false"
                    android:id="@+id/user_sex_girl_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radio_padding_size"
                    android:hint="@string/sex_is_girl"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/regist_textsize" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/radio_padding_size"
                android:layout_weight="2"
                android:text="@string/user_age_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regist_textsize" />

            <EditText
                android:id="@+id/user_age_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radio_padding_size"
                android:layout_weight="6"
                android:enabled="false"
                android:lines="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />
        <!-- 简介 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/radio_padding_size"
                android:layout_weight="2"
                android:text="@string/user_introduce_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regist_textsize" />

            <EditText
                android:id="@+id/user_introduce_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radio_padding_size"
                android:layout_weight="6"
                android:enabled="false"
                android:hint="@string/introduce_lazy_people"
                android:lines="1"
                android:maxLines="1"
                android:textIsSelectable="false" />
        </LinearLayout>

        <!--代码做隐藏处理 -->
        <Button
            android:id="@+id/user_commit_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:background="@drawable/button_bg"
            android:text="@string/commit_message"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/user_courier_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:text="@string/courier_select_text"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/phone_select_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_padding_size"
            android:text="@string/phone_select_text"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/logout_user_bt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/logout_text"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>