<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/radio_padding_size"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <EditText
        android:layout_margin="@dimen/radio_padding_size"
        android:hint="@string/write_courier_com"
        android:id="@+id/courier_com_et"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:layout_margin="@dimen/radio_padding_size"
        android:hint="@string/write_courier_num"
        android:id="@+id/courier_num_et"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/courier_select_bt"
        android:layout_margin="@dimen/radio_padding_size"
        android:textColor="@android:color/white"
        android:textSize="@dimen/regist_textsize"
        android:background="@drawable/button_bg"
        android:text="@string/select_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/courier_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>
