<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/regist_textsize" />

        <EditText
            android:lines="1"
            android:id="@+id/regist_username_et"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="@dimen/regist_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_world_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/regist_textsize" />

        <EditText
            android:lines="1"
            android:id="@+id/regist_password_et"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="@dimen/regist_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/regist_textsize"
            android:textColor="@android:color/white"
            android:text="@string/regist_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/sex_radio_group"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sex_boy_ischeck"
                android:checked="true"
                android:paddingLeft="@dimen/radio_padding_size"
                android:paddingRight="@dimen/radio_padding_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_is_boy"
                android:textColor="@android:color/white"
                android:textSize="@dimen/regist_textsize" />

            <RadioButton
                android:paddingLeft="@dimen/radio_padding_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_is_girl"
                android:textColor="@android:color/white"
                android:textSize="@dimen/regist_textsize" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/regist_textsize" />

        <EditText
            android:lines="1"
            android:id="@+id/regist_email_et"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="@dimen/regist_textsize" />
    </LinearLayout>

    <Button
        android:id="@+id/regist_user_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/regist_user"
        android:textColor="@android:color/white"
        android:textSize="@dimen/regist_textsize" />

</LinearLayout>
